# OperationKernel

./: .gitignore  CONFIG.md  Cargo.toml  LICENSE  QUICKSTART.md  README.md
src/: agent.rs  cli.rs  event.rs  lib.rs  logging.rs  main.rs
src/config/: mod.rs  station.rs
src/llm/: anthropic.rs  mod.rs  types.rs
src/process/: background_shell.rs  manager.rs  mod.rs
src/search/: mod.rs
src/search/providers/: brave.rs
src/subagent/: config.rs  manager.rs  mod.rs  runner.rs
src/tool/: ask_user_question.rs  base.rs  bash.rs  bash_output.rs  context.rs  edit.rs  enter_plan_mode.rs  exit_plan_mode.rs  glob.rs  grep.rs  kill_shell.rs  mod.rs  notebook.rs  read.rs  task.rs  todo.rs  web_fetch.rs  web_search.rs  write.rs
src/tui/: app.rs  input.rs  message.rs  message_list.rs  mod.rs  question.rs
tests/: config.example.toml  integration_test_phase1.rs  llm_types_serialization.rs  tool_ask_user_question.rs  tool_bash.rs  tool_bash_output.rs  tool_edit.rs  tool_glob.rs  tool_grep.rs  tool_kill_shell.rs  tool_notebook.rs  tool_plan_mode.rs  tool_read.rs  tool_registration.rs  tool_todo.rs  tool_web_fetch.rs  tool_web_search.rs  tool_write.rs
tests/common/: mod.rs
