[package]
name = "ok"
version = "0.1.0"
edition = "2021"
authors = ["OperationKernel Contributors"]
description = "A Rust-based AI coding agent with TUI interface"
license = "MIT"

[[bin]]
name = "ok"
path = "src/main.rs"

[dependencies]
# TUI framework
ratatui = "0.28"
crossterm = { version = "0.28", features = ["event-stream"] }
tui-textarea = "0.6"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Error handling
anyhow = "1"
thiserror = "1"

# Configuration
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "5"

# Network and streaming
reqwest = { version = "0.12", features = ["json", "stream"] }
eventsource-stream = "0.2"
tokio-stream = "0.1"
bytes = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
